<resources>
    <string name="app_name">PawFinder</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="next">Next</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="nav_item_report">Report missing pet</string>
    <string name="nav_item_qr_code">Scan QR code</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_near_you">Range for pets near you</string>
    <string name="nav_item_login">Login</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_change_password">Change password</string>
    <string name="qr_code_text">Add content</string>
    <string name="createAccount">
        <a href="#">Create an account</a>
    </string>
    <string name="TermsOfServices">
        <a href="#">Terms of Services</a>
    </string>
    <string name="btn_signUp">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="title_pet_list">MissingPets</string>
    <string name="title_pet_detail">Pet Detail</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- labele za podatke o zivotinji -->
    <string name="label_name">Name:</string>
    <string name="label_type">Type:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_missing">Missing since:</string>
    <string name="label_last_seen">Last seen:</string>
    <string name="label_owners_email">Owners email:</string>
    <string name="label_owners_phone">Owners phone:</string>
    <string name="label_additional">Additional information:</string>


    <string name="input_text">Input text</string>
    <string name="btn_date">Choose date</string>
    <string name="format_date">mm/dd/yy</string>
    <string name="label_missing_since">Missing since</string>
    <string name="upload_image">Upload image</string>
    <string name="pet_name">Pet name</string>
    <string name="pet_image">Pet\'s image</string>
    <string name="phone_number">Phone number</string>
    <string name="add_info">Additional information</string>
    <string name="finish">Finish</string>
    <string name="title_missing_first">About pet 1/3</string>
    <string name="title_missing_second">Where the pet disappeared? 2/3</string>
    <string name="title_missing_third">Valuable information</string>
    <string name="title_activity_view_on_map">Pet\'s location</string>
    <string name="reports_label">You don\'t have any missing report</string>
    <string name="reports_login_label">If you want to see your reports, please login</string>
    <string name="title_delete_action">Are you sure you want to delete this?</string>
    <string name="message_delete_action">Delete item</string>


    <!-- Login activity -->
    <string name="message_label">Hi, please login to report pet missing or found.</string>
    <string name="or_text">OR</string>
    <string name="login_google">Try login with google account.</string>

    <!--podesavanja-->

    <string name="general_settings">General</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_sum">Change theme</string>
    <string name="account_settings">Account</string>
    <string name="pref_change_passoword">Change password</string>
    <string name="comments">Comments</string>
    <string name="pref_default_current_password">Current password</string>
    <string name="pref_default_new_password">New password</string>
    <string name="pref_default_repeat_password">Repeat password</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_sum">Choose language</string>
    <string name="pref_file">com.abc.preference_file</string>
    <string name="pref_login_status">com.abc.preference_login_status</string>
    <string name="pref_user_email">com.abc.preference_user_email</string>
    <string name="pref_user_google_status">com.abc.preference_google_status</string>
    <string name="pref_notification_summary">Allow notifications</string>
    <string name="pref_notification">Notification</string>

    <!--komentari-->
    <string name="label_name_comment">Name:</string>
    <string name="label_additional_comment">Additional info:</string>
    <string name="send">Send</string>
    <string name="text_send">Type your comment</string>
    <string name="comment_problem">Problem while sending comment!</string>
    <string name="noInternet">There is no internet!</string>
    <string name="comment_delete_dialog_title">Delete</string>
    <string name="comment_delete_dialog_text">Are you sure you want to delete?</string>
    <string name="comment_delete_dialog_ok">Ok</string>
    <string name="comment_delete_dialog_cancel">Cancel</string>
    <string name="comment_progress_title">Deleting</string>
    <string name="comment_progress_text">Please wait...</string>


    <!--skenirani podaci-->
    <string name="scanned_data">Scanned data</string>

    <!--report missing-->
    <string name="button_found">Found</string>
    <string name="button_view_on_map">View on map</string>
    <!--tabovi-->
    <string name="tab_near">Near you</string>
    <string name="tab_missing">Missing</string>
    <string name="tab_reports">My reports</string>
    <string name="tab_fragment">Fragment</string>

    <!--qr code-->
    <string name="qr_explain">Camera permission is needed to scan QR code!</string>
    <string name="qr_stop">To prevent memory leaks barcode scanner has been stopped!</string>
    <string name="qr_add">ADD CONTENT</string>
    <string name="qr_launch">LAUNCH URL</string>
    <string name="qr_barcode">No Barcode Detected</string>
    <string name="notURL">This is not url!</string>

    <!--mape pinovi-->
    <string name="your_location">YOUR LOCATION</string>
    <string name="pet_lost_here">PET LOST HERE</string>

    <!--dijalozi-->
    <string name="oops">Ooops</string>
    <string name="near_you_message">Your Locations seems to be disabled, do you want to enable it? We need your location to show pets lost near you.</string>
    <string name="map_message">Your Locations seems to be disabled, do you want to enable it? If you allow us to locate you, you will easier pin where your pet is lost.</string>
    <string name="sure">Sure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_alert_title">Allow user location</string>
    <string name="location_alert_message">To continue working we need your locations....Allow now?</string>
    <string name="dialog_message">Checking information, please wait.</string>
    <string name="login_dialog_title">Login</string>
    <string name="create_account_dialog_title">Create account</string>
    <string name="missing_report_dialog_title">Adding missing report</string>
    <string name="range_title">Pick radius in kilometers</string>

    <!--missing pet report-->
    <string name="add_pet_success">Pet successfully reported!</string>
    <string name="add_pet_failure">Adding pets missing report faild!!</string>
    <string name="name_blank">Please write pets name</string>
    <string name="date_blank">Please enter date</string>
    <string name="location_blank">Please pin were pet is lost</string>
    <string name="phone_blank">Please enter your phone number</string>
    <string name="network_disabled">There is no network, when network is available your missing report will be sent!</string>
    <string name="image_blank">Please upload pets image</string>
    <string name="sync_pet">Network is available, your missing report is visible to other users.</string>
    <string name="search">Search address</string>

    <string name="galery_access_permission">You can\'t report missing without galery access permission</string>

    <!-- Toasts -->
    <string name="create_account_email_toast">You must enter email address</string>
    <string name="create_account_email_notvalid_toast">Email address not valid</string>
    <string name="create_account_password_toast">You must enter password</string>
    <string name="create_account_success_message">User account created! Please login</string>
    <string name="create_account_email_already_exists">Error. Account with input email already exists</string>
    <string name="login_email_error">Error. Wrong email address, please try again</string>
    <string name="login_password_error">Error. Wrong password, please try again</string>
    <string name="network">Please turn on internet for this action.</string>
    <string name="success_change_password">Password is successfully changed.</string>
    <string name="same_passwords">Passwords must be the same.</string>
    <string name="old_passwords">You didnt enter valid current password.</string>
    <string name="map_network">Please turn on internet to load map and then you can pin where pet is lost.</string>
    <string name="google_login_toast">You are registered via Google. Please try to sign in with google account.</string>

    <!-- Change password -->
    <string name="now_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_again_password">New password, write again</string>
    <string name="ok">OK</string>
    <string name="current_empty">Please enter current password.</string>
    <string name="new_empty">New password must not be empty.</string>

    <string name="logout_success">User successfully logged out</string>

    <string name="error">Error</string>
</resources>

