<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReportDetailActivity"
    tools:showIn="@layout/activity_report_detail">

    <ImageView
        android:id="@+id/pet_report_details_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />


    <LinearLayout
        android:id="@+id/report_lin_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_report_details_image"
        android:layout_alignLeft="@id/pet_report_details_image"
        android:layout_alignRight="@id/pet_report_details_image"
        android:background="@drawable/layout_textview"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_name"
                android:textSize="20dp"></TextView>

            <TextView
                android:id="@+id/report_text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_type"
                android:textSize="20dp"></TextView>

            <TextView
                android:id="@+id/report_text_view_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"></TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_missing"
                android:textSize="20dp"></TextView>

            <TextView
                android:id="@+id/report_text_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"></TextView>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/found_btn"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_blue_button"
                android:text="@string/button_found"
                android:textColor="?attr/buttonTextWhite"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/report_comments"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/comments_pic" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>