<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MissingReportThirdPage">

    <include layout="@layout/toolbar_layout"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true"
        android:fitsSystemWindows="true"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minWidth="300dp"
                    android:minHeight="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_pet_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="?attr/yellow"
                        android:textSize="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/enter_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:importantForAutofill="no"
                            android:inputType="phone"
                            android:textSize="20dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:minWidth="300dp"
                    android:minHeight="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_add_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_info"
                        android:textColor="?attr/yellow"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/enter_add_info"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25dp" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/choose_pet_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/rounded_yellow_button"
                android:text="@string/upload_image"
                android:textColor="?attr/buttonText" />

            <ImageView
                android:id="@+id/upload_image_view"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@id/choose_pet_image"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/pet_image"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_missing_report_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/bigYellowBUtton"
        android:text="@string/finish"
        android:textColor="?attr/buttonText"
        android:textSize="20dp" />

</LinearLayout>