<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity"
        android:weightSum="5">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Login"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Hi, please login to report pet missing or found."
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/colorGrey"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/yellow"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textWebEmailAddress"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password"
            android:textColor="@color/yellow"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/bLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_yellow_button"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/lCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/createAccount"
            android:textColorLink="@color/yellow"
            android:textSize="20dp"
            android:textStyle="bold"
            android:clickable="true"/>


    </LinearLayout>
